--- a/themes/novatec/layouts/_default/li.html
+++ b/themes/novatec/layouts/_default/li.html
@@ -1,3 +1,8 @@
-<li>
-  <a href="{{ .Permalink }}">{{ .Title }}</a>
+<li class="product-grid-block">
+  <a href="{{ .Permalink }}">
+    <div class="product-grid-image" style="background-image: url({{ .Params.imagen }});"></div>
+    <div class="product-block-title">
+      <h3>{{ .Title }}</h3>
+    </div>
+  </a>
 </li>
