--- a/themes/novatec/layouts/_default/summary.html
+++ b/themes/novatec/layouts/_default/summary.html
@@ -1,9 +1,8 @@
-<article>
-  <header>
-    <h2><a href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
-  </header>
-  {{ .Summary }}
-  <footer>
-  <a href='{{ .Permalink }}'><nobr>Read more →</nobr></a>
-  </footer>
-</article>
+<li class="product-grid-block">
+  <a href="{{ .Permalink }}">
+    <div class="product-grid-image" style="background-image: url({{ .Params.imagen }});"></div>
+    <div class="product-block-title">
+      <h3>{{ .Title }}</h3>
+    </div>
+  </a>
+</li>
