--- a/themes/novatec/layouts/_default/single.html
+++ b/themes/novatec/layouts/_default/single.html
@@ -1,4 +1,9 @@
+{{ define "page-title"}}
+  {{ partial "page-title.html" .}}
+{{ end }}
+
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
+  <div class="container">
+    {{ .Content }}
+  </div>
 {{ end }}
