--- a/themes/novatec/layouts/taxonomy/marca.terms.html
+++ b/themes/novatec/layouts/taxonomy/marca.terms.html
@@ -1,3 +1,4 @@
+This is the marca.terms.html template located at /themes/novatec/layouts/taxonomy/marca.terms.html
 {{ define "page-title"}}
   {{ partial "page-title.html" .}}
 {{ end }}
