Finish prouct layout
I'm only missing image galleries

--- a/assets/scss/components/_page-title.scss
+++ b/assets/scss/components/_page-title.scss
@@ -20,4 +20,12 @@
     opacity: 0.5;
     z-index: -1;
   }
+
+  .container {
+    @include clearfix;
+  }
+}
+
+.title-container {
+  @include grid-column(12);
 }
