--- a/themes/novatec/layouts/partials/page-title.html
+++ b/themes/novatec/layouts/partials/page-title.html
@@ -1,5 +1,7 @@
 <div class="page-title" style="background-image: url('/images/masshead/productos.jpg');">
   <div class="container">
-    <h1>{{ .Title }}</h1>
+    <div class="title-container">
+      <h1>{{ .Title }}</h1>
+    </div>
   </div>
 </div>
