--- a/assets/scss/components/_marcas.scss
+++ b/assets/scss/components/_marcas.scss
@@ -11,3 +11,38 @@
     margin: 0;
   }
 }
+
+#marca {
+  @include grid-column(3);
+  padding: 4px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+}
+
+.marca-box {
+  padding: 0 20px 20px 20px;
+  text-align: center;
+
+  a {
+    color: $azul;
+    font-size: .8em;
+  }
+
+  img {
+    max-width: 100%;
+  }
+}
+
+.marca-tags {
+  border-top: solid 1px $light-grey;
+  padding: 20px;
+  font-size: .8em;
+
+  a {
+    color: $azul;
+    font-size: .8em;
+  }
+}
