Fix familias layout
Fixed image paths, and diplayed only famiias that are published.

Unpubublished familias were still showing up. It was because of the
taxonomy term pages create by hugo. So in the product list I removed
pages that have id = nil

--- a/themes/novatec/layouts/section/productos.html
+++ b/themes/novatec/layouts/section/productos.html
@@ -5,10 +5,10 @@
 {{ define "main" }}
   <div class="container">
     <ul class="product-grid">
-      {{ range ($.Site.GetPage "taxonomyTerm" "familias").Pages }}
+      {{ range where ($.Site.GetPage "taxonomyTerm" "familias").Pages.ByWeight ".Params.id" "!=" nil }}
         <li class="product-grid-block">
           <a href="{{ .Permalink }}">
-            <div class="product-grid-image" style="background-image: url(/images/familias/{{ .Params.imagen }});"></div>
+            <div class="product-grid-image" style="background-image: url({{ .Params.imagen }});"></div>
             <div class="product-block-title">
               <h3>{{ .Title }}</h3>
             </div>
