Work on industrias

--- a/themes/novatec/layouts/industrias/single.html
+++ b/themes/novatec/layouts/industrias/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-  <div class='container'>
-    {{ partial "pages-list.html" .Data.Pages }}
+  <div class="container">
+    {{ .Content }}
   </div>
 {{ end }}
