--- a/assets/scss/base/_helpers.scss
+++ b/assets/scss/base/_helpers.scss
@@ -53,3 +53,18 @@
   position: absolute;
   width: 1px;
 }
+
+
+.pages-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.small-text {
+  font-size: 0.8em;
+}
