--- a/assets/scss/pages/_industria.scss
+++ b/assets/scss/pages/_industria.scss
@@ -57,3 +57,15 @@
   }
 
 }
+
+
+.industria-page {}
+.industria-page-imagen {
+  @include grid-column(4);
+}
+.industria-page-productos {
+  @include grid-column(4);
+}
+.industria-page-marcas {
+  @include grid-column(4);
+}
