--- a/themes/novatec/layouts/taxonomy/industria.terms.html
+++ b/themes/novatec/layouts/taxonomy/industria.terms.html
@@ -13,40 +13,45 @@
     {{ partial "page-title.html" . }}
     <div class="container">
       <section id="industrias-block">
-        {{ range $taxonomyname, $taxonomy := .Site.Taxonomies.industrias }}
-          <div class="industria-title" id="{{ urlize $taxonomyname }}">{{ $taxonomyname }}</div>
+        {{ range where (where .Data.Pages.ByWeight ".Params.id" "!=" nil) ".Params.draft" "!=" true }}
+          <div class="industria-title" id="{{ urlize .Title }}">{{ .Title }}</div>
           <div class="industria-block">
             <div class="grid-container">
               <div class="industria-detalles">
-                {{ $industria := urlize $taxonomyname }}
-                {{- with $.Site.GetPage "taxonomyTerm" "industrias" $industria }}
-                  {{ with .Params.imagen }}<img src="/images/industrias/{{ . }}" alt="{{ $taxonomyname }}" />{{ end }}
-
+                  {{ with .Params.imagen }}<img src="/images/industrias/{{ . }}" alt="" />{{ end }}
                   <a class="btn btn-primary" href="{{ .Permalink }}">Ver más información</a>
-                {{ end -}}
               </div>
+
               <div class="industria-productos">
                 <h3>Productos</h3>
                 <ul>
+                  {{ $marcas := urlize .Title }}
+                  {{ $taxonomy := index $.Site.Taxonomies.industrias .Title }}
                   {{ range $taxonomy.Pages }}
-                    {{ $.Scratch.Add "marcas-industria" .Params.marcas }}
-                    <li><a href="{{ .Params.permalink }}">{{ .Title }}</a></li>
+                    {{ $.Scratch.Add $marcas .Params.marcas }}
+                    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
                   {{ end }}
                 </ul>
               </div>
+
               <div class="industria-marcas">
                 <h3>Marcas</h3>
+                {{ partial "pages-list.html" .Data.Pages }}
                 <ul>
-                  {{ $.Scratch.Get "marcas-industria" }}
+                  {{ range uniq ($.Scratch.Get $marcas) }}
+                    {{ $marca := $.Site.GetPage "taxonomyTerm" "marcas" (urlize .)  }}
+                    <li><a href="{{ $marca.Permalink }}">{{ $marca.Title }}</a></li>
+                  {{ end }}
                 </ul>
               </div>
+
             </div>
           </div>
         {{ end }}
       </section>
       <nav id="industrias-nav">
         <ul>
-          {{ range ($.Site.GetPage "taxonomyTerm" "industrias").Pages }}
+          {{ range .Data.Pages.ByWeight }}
             <li><a href="#{{ urlize .Title }}">{{ .Title }}</a></li>
           {{ end }}
         </ul>
