--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
-header {
+#main-header {
   padding: $general-padding 0;
   background: $blanco;
   box-shadow: 1px 1px 5px rgba(68,68,68,0.3);
