--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="main-header">
   <a href="javascript:void(0)" id="abrir-main-nav-button" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
 </a>
   <div class="header-logo-container">
