--- a/themes/novatec/layouts/noticias/summary.html
+++ b/themes/novatec/layouts/noticias/summary.html
@@ -1,11 +1,25 @@
-<li class="noticias-grid-block">
-  <a href="{{ .Permalink }}">
-    <div class="noticias-grid-image" style="background-image: url({{ .Params.imagen_intro }});"></div>
-    <img src="/{{ .Params.imagen_intro }}" />
-    <div class="noticias-block-title">
-      <h3>{{ .Title }}</h3>
-    </div>
-    {{ .Summary }}
-    {{ .Params.date }}
-  </a>
-</li>
+<article class="post-item">
+  <div class="inner">
+  	<header class="entry-header">
+  		<a class="post-thumbnail__link" href="{{ .Permalink }}">
+        <img class="smart-box-image" src="/{{ .Params.imagen_intro }}" alt="">
+      </a>
+    </header>
+  	<div class="entry-content">
+  		<h5 class="noticia-title">
+  			<a href="{{ .Permalink }}">{{ .Title }}</a>
+      </h5>
+      <div class="noticias-summary">
+    		{{ .Summary }}
+      </div>
+      <div class="entry-meta">
+  			<div class="meta-inner">
+					<span class="post__date">
+            <i class="fa fa-clock-o"></i>
+            {{ .Params.date.Format "2006-01-02" }}
+          </span>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</article>
