Pagination to news
Changed default language - didn't work

Imported other news

--- a/themes/novatec/layouts/noticias/summary.html
+++ b/themes/novatec/layouts/noticias/summary.html
@@ -16,7 +16,7 @@
   			<div class="meta-inner">
 					<span class="post__date">
             <i class="fa fa-clock-o"></i>
-            {{ .Params.date.Format "2006-01-02" }}
+            {{ dateFormat "2 Jan 2006" .Params.date }}
           </span>
   			</div>
   		</div>
