--- a/themes/novatec/layouts/noticias/summary.html
+++ b/themes/novatec/layouts/noticias/summary.html
@@ -17,7 +17,7 @@
   			<div class="meta-inner">
 					<span class="post__date">
             <i class="fa fa-clock-o"></i>
-            {{ dateFormat "2" .Params.date }} {{ index $meses (dateFormat "Jan" .Params.date) }}, {{ dateFormat "2006" .Params.date }}
+            {{ replace (dateFormat "2 #mes#, 2006" .Params.date) "#mes#" (index $meses (dateFormat "Jan" .Params.date)) }}
           </span>
   			</div>
   		</div>
