--- a/assets/scss/pages/_noticias.scss
+++ b/assets/scss/pages/_noticias.scss
@@ -33,3 +33,18 @@
 .noticias-summary {
   font-size: 0.9em;
 }
+
+.noticias-date-title-bar {
+  font-size: 0.8em;
+  color: #fff;
+}
+
+.full-article-image {
+  display: inline-block;
+  float: right;
+  width: 30%;
+}
+
+.article-content {
+  @include grid-column(12);
+}
