--- a/themes/novatec/layouts/noticias/summary.html
+++ b/themes/novatec/layouts/noticias/summary.html
@@ -1,4 +1,3 @@
-{{ $meses := index $.Site.Data.meses }}
 <article class="post-item">
   <div class="inner">
   	<header class="entry-header">
@@ -17,7 +16,7 @@
   			<div class="meta-inner">
 					<span class="post__date">
             <i class="fa fa-clock-o"></i>
-            {{ replace (dateFormat "2 #mes#, 2006" .Params.date) "#mes#" (index $meses (dateFormat "Jan" .Params.date)) }}
+            {{ replace (dateFormat "2 #mes#, 2006" .Params.date) "#mes#" (index $.Site.Data.meses (dateFormat "Jan" .Params.date)) }}
           </span>
   			</div>
   		</div>
