--- a/themes/novatec/layouts/_default/single.html
+++ b/themes/novatec/layouts/_default/single.html
@@ -4,6 +4,8 @@
 
 {{ define "main" }}
   <div class="container">
-    {{ .Content }}
+    <div class="full-width-div">
+      {{ .Content }}
+    </div>
   </div>
 {{ end }}
