Handle marcas for novatec construcción

--- a/themes/novatec/layouts/_default/single.html
+++ b/themes/novatec/layouts/_default/single.html
@@ -6,25 +6,16 @@
   <div class="container">
     <div class="grid-container">
     <section id="producto-main">
+      <img src="{{ .Params.imagen }}" />
       {{ .Content }}
     </section>
     <section id="marca">
-      {{ if .Params.industrias }}
-        {{ $brand := urlize (index .Params.marcas 0) }}
-        {{- with $.Site.GetPage "taxonomyTerm" "marcas" $brand }}
+      {{ if .Params.ncmarcas }}
+        {{ $brand := urlize (index .Params.ncmarcas 0) }}
+        {{- with $.Site.GetPage "taxonomyTerm" "ncmarcas" $brand }}
           {{ partial "marca-sidebar" . }}
         {{ end -}}
       {{ end }}
-      <div class="marca-tags">
-        {{ range $.Params.familias }}
-          <strong>Familia de productos:</strong> <a href="{{ "/familias/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-        {{ end }}
-        <br/>
-        {{ if .Params.industrias }}
-          <strong>Industria{{ if gt (len .Params.industrias) 1 }}s{{ end }}:</strong>
-          {{ range $index, $industria := .Params.industrias }}{{ if gt $index 0 }}, {{ end }}<a href="{{ "industrias/" | relURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
-        {{ end }}
-      </div>
     </section>
   </div>
   </div>
