--- a/themes/novatec/layouts/partials/marca-sidebar.html
+++ b/themes/novatec/layouts/partials/marca-sidebar.html
@@ -1,4 +1,4 @@
 <div class="marca-box">
-  <img src="/images/logos/{{ .Params.logo }}" alt="{{ .Title }}" />
+  <img src="/images/logos/{{ .Params.logo }}" alt="{{ .Title }}" /><br/>
   <a href="{{ .Params.link }}" target="_blank" rel="noopener"><i class="fa fa-globe"></i> Ir al sitio de {{ .Title }}</a>
 </div>
