Add container to footer

--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer id="footer">
+  <div class="container">
   <section class="footer-section">
     {{ if eq .Section "novatec-construccion" }}
       <h3>NVTConstucción S.A.</h3>
@@ -78,7 +79,10 @@
       <input type="submit" class="btn-primary" value="enviar" />
     </form>
   </section>
+</div>
   <div class="legal-footer">
-    Copyright © 2017 Novatec Industrial. Todos los derechos reservados.
+    <div class="container">
+      Copyright © 2017 Novatec Industrial. Todos los derechos reservados.
+    </div>
   </div>
 </footer>
