--- a/assets/scss/base/_forms.scss
+++ b/assets/scss/base/_forms.scss
@@ -33,4 +33,20 @@
 
 .contact-info {
   @include grid-column(6);
+
+  ul {
+    list-style: none;
+    padding: 0;
+    font-size: 14px;
+  }
+
+  h2 {
+    border-bottom: 1px solid $light-grey;
+    padding-bottom: 20px
+  }
+}
+
+.requerido:after {
+  content: "*";
+  color: red;
 }
