Add basic search support

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -35,6 +35,7 @@
   'components/fondo_imagen',
   'components/noticias-home',
   'components/marcas',
+  'components/search',
   'components/slides';
 
 // 6. Page-specific styles
