--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -39,8 +39,11 @@
   <section role="search" class="header-search">
     <form action="#" method="get">
       <label for="q">
-          <input type="search" name="q" id="s" placeholder="Buscar..." maxlength="200" />
+          <input type="search" id="search" placeholder="Buscar..." maxlength="200" autocomplete="off" />
       </label>
     </form>
+    <div class="search-results-box">
+      <ul id="results"></ul>
+    </div>
   </section>
 </header>
