--- a/themes/novatec/layouts/search-index/single.html
+++ b/themes/novatec/layouts/search-index/single.html
@@ -1,5 +1,5 @@
 {{- $.Scratch.Add "index" slice -}}
-{{- range where .Site.Pages "Type" "not in"  (slice "page" "search-index") -}}
+{{- range where .Site.Pages "Type" "not in"  (slice "search-index") -}}
 {{- $.Scratch.Add "index" (dict "title" .Title "ref" .Permalink "tags" .Params.tags) -}}
 {{- end -}}
 {{- $.Scratch.Get "index" | jsonify -}}
