Make header logo clickable

--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -3,9 +3,9 @@
 </a>
   <div class="header-logo-container">
     {{ if eq .Section "novatec-construccion" }}
-      <img src="/images/logos/NC.png" alt="Logo Description" class="header-logo">
+      <a href="/novatec-construccion/"><img src="/images/logos/NC.png" alt="Logo Description" class="header-logo"></a>
     {{ else }}
-      <img src="/images/Logo-Novatec-amarillo.jpg" alt="Logo Description" class="header-logo">
+      <a href="/"><img src="/images/Logo-Novatec-amarillo.jpg" alt="Logo Description" class="header-logo"></a>
     {{ end }}
   </div>
   <nav id="main-nav" role="navigation">
