--- a/themes/novatec/layouts/partials/marcas-home.html
+++ b/themes/novatec/layouts/partials/marcas-home.html
@@ -2,12 +2,17 @@
   <div class="container">
     <h2 class="home-title">Nuestras marcas</h2>
     <ul>
-      {{ range where .Data.Pages "Section" "marcas" }}
+      {{ if eq .Section "novatec-construccion" }}
+        {{ $.Scratch.Set "marcas" ($.Site.GetPage "taxonomyTerm" "ncmarcas").Pages }}
+      {{ else }}
+        {{ $.Scratch.Set "marcas" ($.Site.GetPage "taxonomyTerm" "marcas").Pages }}
+      {{ end }}
+      {{ range $.Scratch.Get "marcas" }}
         {{ $marca := . }}
         {{ with .Params.logo }}
           <li>
             <a href="{{ $marca.Params.link }}" target="_blank" title="Haga click para visitar el sitio web de {{ $marca.Title }}">
-              <img src="/images/logos/{{ . }}" width="108" alt="{{ $marca.Title }}" />
+              <img src="{{ . }}" width="108" alt="{{ $marca.Title }}" />
             </a>
           </li>
         {{ end }}
