--- a/themes/novatec/layouts/_default/terms.html
+++ b/themes/novatec/layouts/_default/terms.html
@@ -8,7 +8,7 @@
       {{ range where .Data.Pages.ByWeight ".Params.id" "!=" nil }}
         <li class="product-grid-block-logo">
           <a href="{{ .Permalink }}">
-            <div class="product-grid-image" style="background-image: url(/images/logos/{{ .Params.logo }});"></div>
+            <div class="product-grid-image" style="background-image: url({{ .Params.logo }});"></div>
             <div class="product-block-title">
               <h3>{{ .Title }}</h3>
             </div>
