--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -36,6 +36,7 @@
   'components/noticias-home',
   'components/marcas',
   'components/search',
+  'components/header-search',
   'components/slides';
 
 // 6. Page-specific styles
