--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -37,10 +37,8 @@
     </ul>
   </nav>
   <section role="search" class="header-search">
-    <form action="#" method="get">
-      <label for="q">
-          <input type="search" id="search" placeholder="Buscar..." maxlength="200" autocomplete="off" />
-      </label>
+    <form action="#" method="get" class="main-search-form">
+      <input name="search" type="search" id="search" placeholder="Buscar..." maxlength="200" autocomplete="off" />
     </form>
     <div class="search-results-box">
       <ul id="results"></ul>
