--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -26,5 +26,6 @@
   crossorigin="anonymous"></script>
   <script src="https://unpkg.com/lunr/lunr.js"></script>
   <script src="/js/search.js"></script>
+  <script src="/js/site.js"></script>
   {{ block "scripts" .}}{{ end }}
 </body>
