Add images for emil signatures

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/11a79f3edd.js"></script>
   <link rel="stylesheet" type="text/css" href="/site.css">
+  {{ partial "social-metatags.html" . }}
 </head>
 <body translate="no">
   {{ partial "header.html" . }}
