Remove image from page title

--- a/themes/novatec/layouts/partials/page-title.html
+++ b/themes/novatec/layouts/partials/page-title.html
@@ -1,4 +1,4 @@
-<div class="page-title" style="background-image: url('/images/masshead/productos.jpg');">
+<div class="page-title">
   <div class="container">
     <div class="title-container">
       <h1>{{ .Title }}</h1>
