--- a/assets/scss/components/_page-title.scss
+++ b/assets/scss/components/_page-title.scss
@@ -1,5 +1,5 @@
 .page-title {
-  padding: $general-padding*2 0;
+  padding: $general-padding 0;
   position: relative;
   z-index: -2;
   background-size: cover;
@@ -7,6 +7,7 @@
 
   h1 {
     color: $blanco;
+    margin: 0;
   }
 
   &:after {
@@ -17,7 +18,6 @@
     width: 100%;
     height: 100%;
     background: $azul;
-    opacity: 0.5;
     z-index: -1;
   }
 
