Work on noticia single template

--- a/assets/scss/pages/_noticias.scss
+++ b/assets/scss/pages/_noticias.scss
@@ -63,5 +63,11 @@
 }
 
 .article-content {
-  @include grid-column(12);
+  max-width: 800px;
+}
+
+.article-full-image {
+  img {
+    max-height: 40vh;
+  }
 }
