--- a/themes/novatec/layouts/noticias/single.html
+++ b/themes/novatec/layouts/noticias/single.html
@@ -1,9 +1,8 @@
 {{ define "page-title"}}
-  <div class="page-title" style="background-image: url('/images/masshead/productos.jpg');">
+  <div class="page-title">
     <div class="container">
       <div class="title-container">
-        <h1>{{ .Title }}</h1>
-        <small class="noticias-date-title-bar">{{ replace (dateFormat "2 #mes#, 2006" .Params.date) "#mes#" (index  (dateFormat "Jan" .Params.date)) }}</small>
+        <h1>Noticias</h1>
       </div>
     </div>
   </div>
@@ -13,10 +12,12 @@
   <div class="container">
     <article class="article-content">
       {{ if ne .Params.imagen_full "" }}
-        <div class="full-article-image">
+        <div class="article-full-image">
           <img src="{{ .Params.imagen_full }}" alt="{{$.Title}}" />
         </div>
       {{end}}
+      <h2>{{ .Title }}</h2>
+      <p class="article-date"><small>{{ replace (dateFormat "2 #mes#, 2006" .Params.date) "#mes#" (index  (dateFormat "Jan" .Params.date)) }}</small></p>
       {{ .Content }}
     </article>
   </div>
