--- a/assets/scss/pages/_noticias.scss
+++ b/assets/scss/pages/_noticias.scss
@@ -63,11 +63,21 @@
 }
 
 .article-content {
-  max-width: 800px;
+  @include grid-column(12);
+
+  @include grid-media($tablet-grid){
+    @include grid-column(9);
+  }
 }
 
 .article-full-image {
   img {
     max-height: 40vh;
+  }
+}
+.article-aside {
+  @include grid-column(12);
+  @include grid-media($tablet-grid) {
+    @include grid-column(3);
   }
 }
