--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -4,7 +4,18 @@
       {{ with .link }}
         <a href="{{ . }}">
       {{ end }}
-        <img src="{{ .image }}" class="slide-image" />
+        <img class="slide-image" />
+        <img srcset="{{ .Site.Params.cloudinary_url }}w_320{{ .image }} 320w,
+        {{ .Site.Params.cloudinary_url }}f_auto,w_480,h_133,c_fit{{ .image }} 480w,
+        {{ .Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fit{{ .image }} 800w,
+        {{ .Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fit{{ .image }} 1100w,
+        {{ .Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fit{{ .image }} 1500w"
+             sizes="(max-width: 320px) 320px,
+             (max-width: 480px) 480px,
+             (max-width: 800px) 800px,
+             (max-width: 1100px) 1100px,
+             1500px"
+             src="{{ .Site.Params.cloudinary_url }}w_1500,h_417,f_auto,c_fit{{ .image }}" alt="{{ $.Title }}" class="slide-image" />
         <div class="slide-text">
           <div class="slide-title">
             {{ .title }}
