--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -4,8 +4,8 @@
       {{ with .link }}
         <a href="{{ . }}">
       {{ end }}
-        <img srcset="{{ $.Site.Params.cloudinary_url }}w_320{{ .image }} 320w,
-        {{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_133,c_fill,g_face{{ .image }} 480w,
+        <img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
+        {{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_400,c_fill,g_face{{ .image }} 480w,
         {{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fill,g_face{{ .image }} 800w,
         {{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fill,g_face{{ .image }} 1100w,
         {{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fill,g_face{{ .image }} 1500w"
