Add slick slider

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -37,7 +37,9 @@
   'components/marcas',
   'components/search',
   'components/header-search',
-  'components/slides';
+  'components/slides',
+  'slick',
+  'slick-theme';
 
 // 6. Page-specific styles
 @import
