--- a/assets/scss/components/_slides.scss
+++ b/assets/scss/components/_slides.scss
@@ -1,84 +1,7 @@
 #slides {
-  position: relative;
-  height: 400px;
-  padding: 0px;
-  margin: 0px;
+	padding: 0;
+	margin: 0;
   list-style-type: none;
-  overflow: hidden;
-
-  &:hover > .slider-controls{
-    opacity: 1;
-  }
-}
-
-.slide {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  z-index: 1;
-
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  transition: opacity 1s;
-}
-
-.showing {
-  opacity: 1;
-  z-index: 2;
-}
-
-.slider-controls {
-  position: absolute;
-  width: 100%;
-  z-index: 3;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: opacity 0.5s;
-
-  button {
-    border-radius: 50%;
-    color: $blanco;
-    border: 0;
-    width: 40px;
-    height: 40px;
-    background: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    padding: 0;
-    line-height: 1;
-    cursor: pointer;
-    opacity: 0.8;
-
-    &:hover {
-      background: rgba(0, 0, 0, 0.7);
-      opacity: 1;
-    }
-  }
-
-  #previous {
-    position: absolute;
-    left: $general-padding*2;
-    top: 0;
-
-    i {
-      margin-left: -4px;
-    }
-  }
-
-  #next {
-    position: absolute;
-    right: $general-padding*2;
-    top: 0;
-
-    i {
-      margin-right: -4px;
-    }
-  }
 }
 
 .slide-text {
@@ -102,8 +25,4 @@
   font-size: 0.8em;
   line-height: 1;
   padding: 0;
-}
-
-.slide-image {
-  width: 100%;
 }
