--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -5,16 +5,27 @@
         <a href="{{ . }}">
       {{ end }}
         <img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
-        {{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_400,c_fill,g_face{{ .image }} 480w,
-        {{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fill,g_face{{ .image }} 800w,
-        {{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fill,g_face{{ .image }} 1100w,
-        {{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fill,g_face{{ .image }} 1500w"
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_400,c_fill,g_face{{ .image }} 480w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fill,g_face{{ .image }} 800w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fill,g_face{{ .image }} 1100w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fill,g_face{{ .image }} 1500w"
              sizes="(max-width: 320px) 320px,
              (max-width: 480px) 480px,
              (max-width: 800px) 800px,
              (max-width: 1100px) 1100px,
              1500px"
-             src="{{ $.Site.Params.cloudinary_url }}w_1500,h_417,f_auto,c_fill,g_face{{ .image }}" alt="{{ $.Title }}" class="slide-image" />
+             src="{{ $.Site.Params.cloudinary_url }}w_1500,h_417,f_auto,c_fill,g_face{{ .image }}" alt="{{ $.Title }}" class="desktop" />
+				<img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_600,c_fill,g_face{{ .image }} 480w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_1000,c_fill,g_face{{ .image }} 800w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_1375,c_fill,g_face{{ .image }} 1100w,
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_1875,c_fill,g_face{{ .image }} 1500w"
+						 sizes="(max-width: 320px) 320px,
+						 (max-width: 480px) 480px,
+						 (max-width: 800px) 800px,
+						 (max-width: 1100px) 1100px,
+						 1500px"
+						 src="{{ $.Site.Params.cloudinary_url }}w_1500,h_1875,f_auto,c_fill,g_face{{ .image }}" alt="{{ $.Title }}" class="mobile" />
         <div class="slide-text">
           <div class="slide-title">
             {{ .title }}
