--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -8,12 +8,14 @@
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_400,c_fill,g_face,q_75{{ .image }} 480w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fill,g_face,q_75{{ .image }} 800w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fill,g_face,q_75{{ .image }} 1100w,
-						{{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fill,g_face,q_75{{ .image }} 1500w"
+						{{ $.Site.Params.cloudinary_url }}f_auto,w_1500,h_417,c_fill,g_face,q_75{{ .image }} 1500w,
+             {{ $.Site.Params.cloudinary_url }}f_auto,w_2000,h_800,c_fill,g_face,q_75{{ .image }} 2000w"
              sizes="(max-width: 320px) 320px,
              (max-width: 480px) 480px,
              (max-width: 800px) 800px,
              (max-width: 1100px) 1100px,
-             1500px"
+             (max-width: 1500px) 1500px,
+             2000px"
              src="{{ $.Site.Params.cloudinary_url }}w_1500,h_417,f_auto,c_fill,g_face,q_75{{ .image }}" alt="{{ $.Title }}" class="desktop" />
 				<img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_600,c_fill,g_face,q_75{{ .image }} 480w,
