--- a/assets/scss/components/_marcas.scss
+++ b/assets/scss/components/_marcas.scss
@@ -4,11 +4,17 @@
     text-align: center;
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: row wrap;
   }
   li {
     display: inline-block;
     padding: 5px;
     margin: 0;
+    flex: 0 0 108px;
+    width: 108px;
   }
 }
 
