--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/lunr/lunr.js"></script>
+  <script src="/js/lunr.min.js"></script>
   <script src="/js/search.js"></script>
   {{ block "scripts" .}}{{ end }}
 </body>
