Change image properties in noticias summary

--- a/themes/novatec/layouts/noticias/summary.html
+++ b/themes/novatec/layouts/noticias/summary.html
@@ -1,7 +1,7 @@
 <article class="post-item">
   <div class="inner">
       <header>
-        <img src="{{ .Site.Params.cloudinary_url }}w_550,h_413,c_fit{{ .Params.imagen_full }}" alt="{{ .Title }}">
+        <img src="{{ .Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{ .Params.imagen_full }}" alt="{{ .Title }}">
       </header>
   	<div class="entry-content">
   		<h5 class="noticia-title">
