--- a/themes/novatec/layouts/_default/terms.html
+++ b/themes/novatec/layouts/_default/terms.html
@@ -8,7 +8,8 @@
       {{ range where .Data.Pages.ByWeight ".Params.id" "!=" nil }}
         <li class="product-grid-block-logo">
           <a href="{{ .Permalink }}">
-            <div class="product-grid-image" style="background-image: url({{ .Params.logo }});"></div>
+            <div class="product-grid-image" style="background-image: url({{ $.Site.Params.cloudinary_url }}f_auto,w_280,h_280,c_fit,q_80{{.Params.logo}});">
+            </div>
             <div class="product-block-title">
               <h3>{{ .Title }}</h3>
             </div>
