--- a/assets/scss/components/_noticias-home.scss
+++ b/assets/scss/components/_noticias-home.scss
@@ -26,11 +26,8 @@
 }
 
 .noticia-imagen-container {
-  position: relative;
-  height: 0;
-  width: 100%;
-  padding-top: 50%;
   border: solid 1px $mid-grey;
+  overflow: hidden;
 }
 
 .noticia-imagen {
