Remove white space under noticias images @ home

--- a/assets/scss/components/_noticias-home.scss
+++ b/assets/scss/components/_noticias-home.scss
@@ -28,6 +28,10 @@
 .noticia-imagen-container {
   border: solid 1px $mid-grey;
   overflow: hidden;
+
+  img {
+    display: block;
+  }
 }
 
 .noticia-imagen {
