--- a/themes/novatec/layouts/partials/noticias-home.html
+++ b/themes/novatec/layouts/partials/noticias-home.html
@@ -2,11 +2,15 @@
   <div class="container">
     <h2 class="home-title">Últimas noticias</h2>
     <ul>
-      {{ range first 4 (where (where .Data.Pages "Section" "noticias" ) ".Params.draft" "==" false) }}
+      {{ $noticias := where .Data.Pages "Section" "noticias" }}
+      {{ $published := where .Data.Pages "Params.draft" false }}
+      {{ $featured := where .Data.Pages "Params.featured" true }}
+      {{ $filtered := $noticias | intersect $featured }}
+      {{ range first 4 $filtered }}
          <li>
            <a class="noticia-image-link" href="{{ .Permalink }}">
              <div class="noticia-imagen-container">
-                <img src="{{ $.Site.Params.cloudinary_url }}f_auto,w_260,h_195,c_fit{{ .Params.imagen_intro }}" alt="{{ .Title }}" />
+                <img src="{{ $.Site.Params.cloudinary_url }}f_auto,w_260,h_195,c_fill{{ .Params.imagen_intro }}" alt="{{ .Title }}" />
              </div>
            </a>
            <a class="noticia-title" href="{{ .Permalink }}">
