--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -5,7 +5,9 @@
     {{ if eq .Section "novatec-construccion" }}
       <a href="/novatec-construccion/"><img src="/images/logos/NC.png" alt="Logo Description" class="header-logo"></a>
     {{ else }}
-      <a href="/"><img src="/images/Logo-Novatec-amarillo.jpg" alt="Logo Description" class="header-logo"></a>
+      <a href="/">
+        <img src="/logo.svg" alt="Novatec" class="header-logo">
+      </a>
     {{ end }}
   </div>
   <nav id="main-nav" role="navigation">
