Use local version of fontawesome

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="/myFavicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://use.fontawesome.com/11a79f3edd.js"></script>
+  <script src="/js/11a79f3edd.js"></script>
   <link rel="stylesheet" type="text/css" href="/site.css">
   {{ partial "social-metatags.html" . }}
 </head>
