--- a/themes/novatec/layouts/index.html
+++ b/themes/novatec/layouts/index.html
@@ -7,5 +7,5 @@
   {{.Content}}
 {{ end }}
 {{ define "scripts" }}
-  <script src="/js/site.js"></script>
+  <script rel="preload" src="/js/site.js"></script>
 {{ end }}
