Preload slick font

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script rel="preload" src="/js/11a79f3edd.js"></script>
+  <link rel="preload" href="/fonts/slick.woff" as="font">
   <link rel="stylesheet" type="text/css" href="/site.css">
   {{ partial "social-metatags.html" . }}
 </head>
