Lazy load slider images

--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -4,7 +4,7 @@
       {{ with .link }}
         <a href="{{ . }}">
       {{ end }}
-        <img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face,q_75{{ .image }} 320w,
+        <img data-lazy-srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face,q_75{{ .image }} 320w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_400,c_fill,g_face,q_75{{ .image }} 480w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_222,c_fill,g_face,q_75{{ .image }} 800w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_306,c_fill,g_face,q_75{{ .image }} 1100w,
@@ -17,7 +17,7 @@
              (max-width: 1500px) 1500px,
              2000px"
              src="{{ $.Site.Params.cloudinary_url }}w_1500,h_417,f_auto,c_fill,g_face,q_75{{ .image }}" alt="{{ $.Title }}" class="desktop" />
-				<img srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
+				<img data-lazy-srcset="{{ $.Site.Params.cloudinary_url }}f_auto,w_320,h_400,c_fill,g_face{{ .image }} 320w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_480,h_600,c_fill,g_face,q_75{{ .image }} 480w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_800,h_1000,c_fill,g_face,q_75{{ .image }} 800w,
 						{{ $.Site.Params.cloudinary_url }}f_auto,w_1100,h_1375,c_fill,g_face,q_75{{ .image }} 1100w,
