--- a/themes/novatec/layouts/partials/marcas-home.html
+++ b/themes/novatec/layouts/partials/marcas-home.html
@@ -11,7 +11,10 @@
         {{ $marca := . }}
         {{ with .Params.logo }}
           <li>
-            <a href="{{ $marca.Params.link }}" target="_blank" title="Haga click para visitar el sitio web de {{ $marca.Title }}">
+            <a href="{{ $marca.Params.link }}" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               title="Haga click para visitar el sitio web de {{ $marca.Title }}">
               <img src="{{ $.Site.Params.cloudinary_url }}f_auto,w_108,h_108,c_fit,q_80{{ . }}" width="108" alt="{{ $marca.Title }}" />
             </a>
           </li>
