--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
 <head>
   <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+  <meta name="description" content="{{ .Params.description }}">
   <link rel="shortcut icon" href="/myFavicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
