--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
   <link rel="shortcut icon" href="/myFavicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="preload" href="/fonts/slick.woff" as="font"> -->
+  <link rel="preload" rel="stylesheet" type="text/css" href="/site.css" media="all">
   <script rel="preload" src="/js/11a79f3edd.js"></script>
-  <link rel="preload" href="/fonts/slick.woff" as="font">
-  <link rel="stylesheet" type="text/css" href="/site.css" media="all">
   {{ partial "social-metatags.html" . }}
 </head>
 <body translate="no">
