Add noopener to exteral links

--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -8,8 +8,8 @@
     {{ end }}
 
     <p><i class="fa fa-globe" aria-hidden="true"></i> De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.</p>
-    <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Abrir en Google Maps</a></p>
-    <p><a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes"><i class="fa fa-location-arrow" aria-hidden="true"></i> Abrir en Waze</a></p>
+    <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank" rel="noopener noreferrer"><i class="fa fa-map-marker" aria-hidden="true"></i> Abrir en Google Maps</a></p>
+    <p><a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes" rel="noopener noreferrer"><i class="fa fa-location-arrow" aria-hidden="true"></i> Abrir en Waze</a></p>
   </section>
   <section class="footer-section">
     <h3>Contacto</h3>
@@ -32,13 +32,13 @@
     <h3>Redes Sociales</h3>
     <ul class="nav  nav-pills nav-stacked list-unstyled" id="social-footer">
       <li>
-        <a class="" href="https://www.facebook.com/NovatecIndustrial" target="_blank">
+        <a class="" href="https://www.facebook.com/NovatecIndustrial" target="_blank" rel="noopener noreferrer">
           <i class="fa fa-facebook-square"></i>
           <span>Facebook</span>
         </a>
       </li>
       <li>
-        <a class="" href="https://twitter.com/novatecnews" target="_blank">
+        <a class="" href="https://twitter.com/novatecnews" target="_blank" rel="noopener noreferrer">
           <i class="fa fa-twitter-square"></i>
           <span>Twitter</span>
         </a>
